mods, it's working now

--- a/beerweb/templates/index.html
+++ b/beerweb/templates/index.html
@@ -2,9 +2,19 @@
 <head>
 	<title>Beerweb</title>
 	<script src="/static/Chart.js"></script>
+	<style>
+		body {
+			font-family: Helvetica, Arial;
+		}
+	</style>
 </head>
 <body>
 <h1>Beerweb</h1>
-<img src="/graph.png">
+<img src="/temp_2h.png">
+<img src="/temp.png"><br>
+<img src="/light_2h.png">
+<img src="/light.png"><br>
+<img src="/bubbles_2h.png">
+<img src="/bubbles.png">
 </body>
 </html>
